--- a/lib-multishoot-camera/src/main/res/values/colors.xml
+++ b/lib-multishoot-camera/src/main/res/values/colors.xml
@@ -6,6 +6,6 @@
 
     <color name="bg_thumbnail_shoot_unselected">#ffffff</color>
     <color name="bg_thumbnail_shoot_selected">@android:color/holo_red_light</color>
-    <color name="btn_enable">#262b3c</color>
+    <color name="btn_enable">#3F51B5</color>
     <color name="btn_disable">#e6e6e6</color>
 </resources>
